--- a/Python_practice.ipynb
+++ b/Python_practice.ipynb
@@ -21,6 +21,34 @@
     "for index_number, fruit in enumerate(fruits):\n",
     "    print(f\"The index is: {index_number} and the fruit is: {fruit}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index is: 0 and fruit is: banana\n",
+      "Index is: 1 and fruit is: apple\n",
+      "Index is: 2 and fruit is: orange\n",
+      "Index is: 3 and fruit is: mango\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Method 2\n",
+    "\n",
+    "fruits = ['banana', 'apple', 'orange' , 'mango']\n",
+    "\n",
+    "index = 0\n",
+    "for fruit in fruits:\n",
+    "    print(f\"Index is: {index} and fruit is: {fruit}\")\n",
+    "    index += 1\n",
+    "#using index variable"
+   ]
   }
  ],
  "metadata": {
