For loop for dictionary

--- a/Python_practice.ipynb
+++ b/Python_practice.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,6 +48,38 @@
     "    print(f\"Index is: {index} and fruit is: {fruit}\")\n",
     "    index += 1\n",
     "#using index variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For loop on dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key is: name: Maria\n",
+      "Key is: age: 23\n",
+      "Key is: gender: Female\n"
+     ]
+    }
+   ],
+   "source": [
+    "person = {\n",
+    "    \"name\" : \"Maria\",\n",
+    "    \"age\" : 23,\n",
+    "    \"gender\" :\"Female\"\n",
+    "}\n",
+    "for item in person:\n",
+    "    print(f\"Key is: {item}:\" , person[item])"
    ]
   }
  ],
