--- a/Python_practice.ipynb
+++ b/Python_practice.ipynb
@@ -81,6 +81,35 @@
     "for item in person:\n",
     "    print(f\"Key is: {item}:\" , person[item])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In dictionary , when we write the name of the dictionary along with its index:\n",
+    "person[item]\n",
+    "i can now access its value\n",
+    "\n",
+    "it will check the item and pick the value against that key from the person dictionary\n",
+    "(item's key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1)"
+   ]
   }
  ],
  "metadata": {
