--- a/Python_practice.ipynb
+++ b/Python_practice.ipynb
@@ -96,19 +96,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "index is: 0 and color: red\n",
+      "index is: 1 and color: orange\n",
+      "index is: 2 and color: blue\n"
      ]
     }
    ],
    "source": [
-    "print(1)"
+    "color = [\"red\", 'orange','blue']\n",
+    "index= 0\n",
+    "for item in color:\n",
+    "    print(f'index is: {index} and color: {item}')\n",
+    "    index += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another Built in function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name is: Maria\n",
+      "age is: 23\n",
+      "gender is: Female\n"
+     ]
+    }
+   ],
+   "source": [
+    "person = {\n",
+    "    \"name\" : \"Maria\",\n",
+    "    \"age\" : 23,\n",
+    "    \"gender\" :\"Female\"\n",
+    "}\n",
+    "\n",
+    "for key, value in person.items(): # The variables key and values may have any name.\n",
+    "    print(f\"{key} is: {value}\")"
    ]
   }
  ],
