--- a/Python_practice.ipynb
+++ b/Python_practice.ipynb
@@ -149,6 +149,47 @@
     "for key, value in person.items(): # The variables key and values may have any name.\n",
     "    print(f\"{key} is: {value}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#For loop using loop control statement\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The color is:  black\n",
+      "skip red\n",
+      "The color is:  orange\n",
+      "The color is:  blue\n",
+      "The color is:  green\n",
+      "Breaking at pink\n"
+     ]
+    }
+   ],
+   "source": [
+    "colors = ['black' ,\"red\", 'orange','blue', 'green' , 'pink', 'yellow']\n",
+    "\n",
+    "for items in colors:\n",
+    "    if items == \"red\":\n",
+    "        print(\"skip red\")\n",
+    "        continue\n",
+    "    elif items == 'pink':\n",
+    "        print(\"Breaking at pink\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"The color is: \", items)\n",
+    "else:\n",
+    "    print(\"Loop ends\")"
+   ]
   }
  ],
  "metadata": {
