--- a/Python_practice.ipynb
+++ b/Python_practice.ipynb
@@ -190,6 +190,29 @@
     "else:\n",
     "    print(\"Loop ends\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is: 0\n",
+      "The number is: 1\n",
+      "The number is: 2\n",
+      "The number is: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "while count < 4:\n",
+    "    print(\"The number is:\", count)\n",
+    "    count += 1"
+   ]
   }
  ],
  "metadata": {
