--- a/Python_practice.ipynb
+++ b/Python_practice.ipynb
@@ -213,6 +213,49 @@
     "    print(\"The number is:\", count)\n",
     "    count += 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0 , 5)\n",
+      "(1 , 5)\n",
+      "(2 , 5)\n",
+      "(3 , 5)\n",
+      "(4 , 5)\n",
+      "(0 , 6)\n",
+      "(1 , 6)\n",
+      "(2 , 6)\n",
+      "(3 , 6)\n",
+      "(4 , 6)\n",
+      "(0 , 7)\n",
+      "(1 , 7)\n",
+      "(2 , 7)\n",
+      "(3 , 7)\n",
+      "(4 , 7)\n",
+      "(0 , 8)\n",
+      "(1 , 8)\n",
+      "(2 , 8)\n",
+      "(3 , 8)\n",
+      "(4 , 8)\n",
+      "(0 , 9)\n",
+      "(1 , 9)\n",
+      "(2 , 9)\n",
+      "(3 , 9)\n",
+      "(4 , 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item1 in range(5,10):\n",
+    "    for item2 in range(0,5):\n",
+    "        print(f\"({item2} , {item1})\")"
+   ]
   }
  ],
  "metadata": {
