--- a/practice.ipynb
+++ b/practice.ipynb
@@ -2,17 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi there, welcome 😊 \n"
+     ]
+    }
+   ],
    "source": [
     "# Emoji Converter\n",
     "user_input = input(\"> \")\n",
-    "split_user_string = user_input.split(\" \")\n",
+    "words = user_input.split(\" \")\n",
     "emojis = {\n",
     "    \":)\" : \"😊\",\n",
     "    \":(\" : \"😒\"\n",
-    "}"
+    "}\n",
+    "output = \"\"\n",
+    "for word in words:\n",
+    "    output += emojis.get(word , word)  + \" \"\n",
+    "print(output)"
    ]
   }
  ],
@@ -23,7 +35,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.5"
   }
  },
