--- a/practice.ipynb
+++ b/practice.ipynb
@@ -26,6 +26,31 @@
     "    output += emojis.get(word , word)  + \" \"\n",
     "print(output)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi there!\n",
+      "Welcome!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#User Greeting Function\n",
+    "#Calling function without parameter\n",
+    "def user_greeting():\n",
+    "    print(\"Hi there!\")\n",
+    "    print(\"Welcome!\")\n",
+    "    \n",
+    "\n",
+    "user_greeting()"
+   ]
   }
  ],
  "metadata": {
