--- a/practice.ipynb
+++ b/practice.ipynb
@@ -51,6 +51,29 @@
     "\n",
     "user_greeting()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Maria\n",
+      "Welcome!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def user_greeting(user):\n",
+    "    print(\"Hi\" , user)\n",
+    "    print(\"Welcome!\")\n",
+    "    \n",
+    "    \n",
+    "user_greeting(\"Maria\")"
+   ]
   }
  ],
  "metadata": {
