--- a/practice.ipynb
+++ b/practice.ipynb
@@ -74,6 +74,27 @@
     "    \n",
     "user_greeting(\"Maria\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Maria Farooq\n"
+     ]
+    }
+   ],
+   "source": [
+    "def name(first_name, last_name):\n",
+    "    print(f\"Hi {first_name} {last_name}\")\n",
+    "    \n",
+    "    \n",
+    "name('Maria' , 'Farooq')"
+   ]
   }
  ],
  "metadata": {
