--- a/practice.ipynb
+++ b/practice.ipynb
@@ -95,6 +95,34 @@
     "    \n",
     "name('Maria' , 'Farooq')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using keyword parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Maria Farooq\n"
+     ]
+    }
+   ],
+   "source": [
+    "def name(first_name, last_name):\n",
+    "    print(f\"Hi {first_name} {last_name}\")\n",
+    "    \n",
+    "    \n",
+    "name(first_name='Maria' , last_name='Farooq')"
+   ]
   }
  ],
  "metadata": {
