--- a/practice.ipynb
+++ b/practice.ipynb
@@ -29,99 +29,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi there!\n",
-      "Welcome!\n"
+      "hi 😊 \n"
      ]
     }
    ],
    "source": [
-    "#User Greeting Function\n",
-    "#Calling function without parameter\n",
-    "def user_greeting():\n",
-    "    print(\"Hi there!\")\n",
-    "    print(\"Welcome!\")\n",
-    "    \n",
     "\n",
-    "user_greeting()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hi Maria\n",
-      "Welcome!\n"
-     ]
-    }
-   ],
-   "source": [
-    "def user_greeting(user):\n",
-    "    print(\"Hi\" , user)\n",
-    "    print(\"Welcome!\")\n",
-    "    \n",
-    "    \n",
-    "user_greeting(\"Maria\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hi Maria Farooq\n"
-     ]
-    }
-   ],
-   "source": [
-    "def name(first_name, last_name):\n",
-    "    print(f\"Hi {first_name} {last_name}\")\n",
-    "    \n",
-    "    \n",
-    "name('Maria' , 'Farooq')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using keyword parameter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hi Maria Farooq\n"
-     ]
-    }
-   ],
-   "source": [
-    "def name(first_name, last_name):\n",
-    "    print(f\"Hi {first_name} {last_name}\")\n",
-    "    \n",
-    "    \n",
-    "name(first_name='Maria' , last_name='Farooq')"
+    "\n",
+    "def emoji_converter(message):\n",
+    "    splitted_words = message.split(\" \")\n",
+    "    emoji = {\n",
+    "    \":)\" : \"😊\",\n",
+    "    \":(\" : \"😒\"\n",
+    "}\n",
+    "    display_output = ''\n",
+    "    for each_word in splitted_words:\n",
+    "        display_output = display_output + emoji.get(each_word , each_word) + \" \"\n",
+    "    return display_output\n",
+    "\n",
+    "message = input(\"> \")\n",
+    "print(emoji_converter(message))\n",
+    "        "
    ]
   }
  ],
